@@ -1,3 +1,12 @@
+Tue May 26 19:01:53 UTC 2009  Adam Mitz  <mitza@ociweb.com>
+
+        * modules/ProjectCreator.pm:
+
+          Changed hard-coded 'resource_files' to a call to get_resource_files,
+          which is a new method on ProjectCreator.  get_resource_files
+          determines the name of 'resource_files' for the current language
+          based on the %language hash (for C# and VB this is 'resx_files').
+
 Mon May 25 11:03:31 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * templates/vc8platforms.mpt:
